--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <section class="portfolio-block skills">
         <div class="container">
           <div class="heading">
-            <h2>Skills and Experience</h2>
+            <h2>Key Skills</h2>
           </div>
           <div class="row">
             <div class="col-md-4">
