--- a/about.html
+++ b/about.html
@@ -86,163 +86,15 @@
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>High School</h3>
-                  <h4 class="organization">St. Lawrence High School</h4>
-                </div>
-                <div class="col-6">
-                  <span class="period">Graduated in 2015</span>
-                </div>
-              </div>
-              <p class="text-muted">
-                Location:&nbsp;Vashi, Navi Mumbai, Maharashtra, India<br />
-              </p>
-              <p class="text-muted">
-                Specialization: SSC<br />
-                Score: 86.80 %
-              </p>
-              <div class="carousel slide" data-ride="carousel" id="carousel-1">
-                <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
-                    <img
-                      class="w-100 d-block"
-                      src="assets/img/education/high-school/high-school (1).jpg"
-                      alt="Slide Image"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      class="w-100 d-block"
-                      src="assets/img/education/high-school/high-school (2).jpg"
-                      alt="Slide Image"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      class="w-100 d-block"
-                      src="assets/img/education/high-school/high-school (3).jpg"
-                      alt="Slide Image"
-                    />
-                  </div>
-                </div>
-                <div>
-                  <a
-                    class="carousel-control-prev"
-                    href="#carousel-1"
-                    role="button"
-                    data-slide="prev"
-                  >
-                    <span class="carousel-control-prev-icon"></span
-                    ><span class="sr-only">Previous</span></a
-                  >
-                  <a
-                    class="carousel-control-next"
-                    href="#carousel-1"
-                    role="button"
-                    data-slide="next"
-                  >
-                    <span class="carousel-control-next-icon"></span
-                    ><span class="sr-only">Next</span></a
-                  >
-                </div>
-                <ol class="carousel-indicators">
-                  <li
-                    data-target="#carousel-1"
-                    data-slide-to="0"
-                    class="active"
-                  ></li>
-                  <li data-target="#carousel-1" data-slide-to="1"></li>
-                  <li data-target="#carousel-1" data-slide-to="2"></li>
-                </ol>
-              </div>
-            </div>
-            <div class="item">
-              <div class="row">
-                <div class="col-md-6">
-                  <h3>Junior College (10+2)</h3>
-                  <h4 class="organization">S. S. Junior College</h4>
-                </div>
-                <div class="col-md-6">
-                  <span class="period">Graduated in 2017</span>
-                </div>
-              </div>
-              <p class="text-muted">
-                Location: Seawoods, Navi Mumbai, Maharashtra, India
-              </p>
-              <p class="text-muted">
-                Specialization: Science PCM (Physics, Chemistry and
-                Mathematics)<br />
-                Score: 71.69 %
-              </p>
-              <div class="carousel slide" data-ride="carousel" id="carousel-2">
-                <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
-                    <img
-                      class="w-100 d-block"
-                      src="assets/img/education/junior-college/junior-college (1).jpg"
-                      alt="Slide Image"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      class="w-100 d-block"
-                      src="assets/img/education/junior-college/junior-college (2).jpg"
-                      alt="Slide Image"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      class="w-100 d-block"
-                      src="assets/img/education/junior-college/junior-college (3).jpg"
-                      alt="Slide Image"
-                    />
-                  </div>
-                </div>
-                <div>
-                  <a
-                    class="carousel-control-prev"
-                    href="#carousel-2"
-                    role="button"
-                    data-slide="prev"
-                  >
-                    <span class="carousel-control-prev-icon"></span
-                    ><span class="sr-only">Previous</span></a
-                  >
-                  <a
-                    class="carousel-control-next"
-                    href="#carousel-2"
-                    role="button"
-                    data-slide="next"
-                  >
-                    <span class="carousel-control-next-icon"></span
-                    ><span class="sr-only">Next</span></a
-                  >
-                </div>
-                <ol class="carousel-indicators">
-                  <li
-                    data-target="#carousel-2"
-                    data-slide-to="0"
-                    class="active"
-                  ></li>
-                  <li data-target="#carousel-2" data-slide-to="1"></li>
-                  <li data-target="#carousel-2" data-slide-to="2"></li>
-                </ol>
-              </div>
-            </div>
-            <div class="item">
-              <div class="row">
-                <div class="col-md-6">
-                  <h3>College</h3>
+                  <h3>Smt. Indira Gandhi College of Engineering</h3>
                   <h4 class="organization">
-                    Smt. Indira Gandhi College of Engineering
+                    Ghansoli, Navi Mumbai, Maharashtra, India
                   </h4>
                 </div>
                 <div class="col-md-6">
                   <span class="period">Graduated in 2021</span>
                 </div>
               </div>
-              <p class="text-muted">
-                Location: Ghansoli, Navi Mumbai, Maharashtra, India
-              </p>
               <p class="text-muted">
                 Specialization: Computer Engineering<br />
                 Score: 7.46 CGPA
@@ -334,23 +186,183 @@
                 </ol>
               </div>
             </div>
+
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>S. S. Junior College</h3>
+                  <h4 class="organization">
+                    Seawoods, Navi Mumbai, Maharashtra, India
+                  </h4>
+                </div>
+                <div class="col-md-6">
+                  <span class="period">Graduated in 2017</span>
+                </div>
+              </div>
+              <p class="text-muted">
+                Specialization: Science PCM (Physics, Chemistry and
+                Mathematics)<br />
+                Score: 71.69 %
+              </p>
+              <div class="carousel slide" data-ride="carousel" id="carousel-2">
+                <div class="carousel-inner" role="listbox">
+                  <div class="carousel-item active">
+                    <img
+                      class="w-100 d-block"
+                      src="assets/img/education/junior-college/junior-college (1).jpg"
+                      alt="Slide Image"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="w-100 d-block"
+                      src="assets/img/education/junior-college/junior-college (2).jpg"
+                      alt="Slide Image"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="w-100 d-block"
+                      src="assets/img/education/junior-college/junior-college (3).jpg"
+                      alt="Slide Image"
+                    />
+                  </div>
+                </div>
+                <div>
+                  <a
+                    class="carousel-control-prev"
+                    href="#carousel-2"
+                    role="button"
+                    data-slide="prev"
+                  >
+                    <span class="carousel-control-prev-icon"></span
+                    ><span class="sr-only">Previous</span></a
+                  >
+                  <a
+                    class="carousel-control-next"
+                    href="#carousel-2"
+                    role="button"
+                    data-slide="next"
+                  >
+                    <span class="carousel-control-next-icon"></span
+                    ><span class="sr-only">Next</span></a
+                  >
+                </div>
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#carousel-2"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li data-target="#carousel-2" data-slide-to="1"></li>
+                  <li data-target="#carousel-2" data-slide-to="2"></li>
+                </ol>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>St. Lawrence High School</h3>
+                  <h4 class="organization">
+                    Vashi, Navi Mumbai, Maharashtra, India
+                  </h4>
+                </div>
+                <div class="col-6">
+                  <span class="period">Graduated in 2015</span>
+                </div>
+              </div>
+              <p class="text-muted">
+                Specialization: SSC<br />
+                Score: 86.80 %
+              </p>
+              <div class="carousel slide" data-ride="carousel" id="carousel-1">
+                <div class="carousel-inner" role="listbox">
+                  <div class="carousel-item active">
+                    <img
+                      class="w-100 d-block"
+                      src="assets/img/education/high-school/high-school (1).jpg"
+                      alt="Slide Image"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="w-100 d-block"
+                      src="assets/img/education/high-school/high-school (2).jpg"
+                      alt="Slide Image"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="w-100 d-block"
+                      src="assets/img/education/high-school/high-school (3).jpg"
+                      alt="Slide Image"
+                    />
+                  </div>
+                </div>
+                <div>
+                  <a
+                    class="carousel-control-prev"
+                    href="#carousel-1"
+                    role="button"
+                    data-slide="prev"
+                  >
+                    <span class="carousel-control-prev-icon"></span
+                    ><span class="sr-only">Previous</span></a
+                  >
+                  <a
+                    class="carousel-control-next"
+                    href="#carousel-1"
+                    role="button"
+                    data-slide="next"
+                  >
+                    <span class="carousel-control-next-icon"></span
+                    ><span class="sr-only">Next</span></a
+                  >
+                </div>
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#carousel-1"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li data-target="#carousel-1" data-slide-to="1"></li>
+                  <li data-target="#carousel-1" data-slide-to="2"></li>
+                </ol>
+              </div>
+            </div>
           </div>
-          <div class="group">
+          <div class="education group">
             <div class="heading">
-              <h2 class="text-center">Internships</h2>
+              <h2 class="text-center">Experience</h2>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Chic Infotech</h3>
+                  <h4 class="organization">Navi Mumbai, Maharashtra, India</h4>
+                </div>
+                <div class="col-md-6">
+                  <span class="period">11/2019 - 12/2019</span>
+                </div>
+              </div>
+              <p class="text-muted">
+                Developed a banking portal chatbot for 24/7 unattended customer
+                support using Rasa.
+              </p>
             </div>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
                   <h3>Bennett University</h3>
+                  <h4 class="organization">
+                    Greater Noida, Uttar Pradesh, India
+                  </h4>
                 </div>
                 <div class="col-md-6">
                   <span class="period">06/2019 - 07/2019</span>
                 </div>
               </div>
-              <p class="text-muted">
-                Location: Greater Noida, Uttar Pradesh, India
-              </p>
               <p class="text-muted">
                 Implemented the PointNet neural network for ‘3D-point cloud’
                 classification using Tensorflow and Keras.
@@ -448,81 +460,6 @@
                   <li data-target="#carousel-4" data-slide-to="6"></li>
                   <li data-target="#carousel-4" data-slide-to="7"></li>
                 </ol>
-              </div>
-            </div>
-            <div class="item">
-              <div class="row">
-                <div class="col-md-6">
-                  <h3>Chic Infotech</h3>
-                </div>
-                <div class="col-md-6">
-                  <span class="period">11/2019 - 12/2019</span>
-                </div>
-              </div>
-              <p class="text-muted">
-                Location: Navi Mumbai, Maharashtra, India
-              </p>
-              <p class="text-muted">
-                Developed a banking portal chatbot for 24/7 unattended customer
-                support using Rasa.
-              </p>
-            </div>
-          </div>
-          <div class="group">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="skills portfolio-info-card">
-                  <h2>Languages</h2>
-                  <h3>English</h3>
-                  <h3>Marathi (Mother Tongue)</h3>
-                  <h3>Hindi</h3>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="contact-info portfolio-info-card">
-                  <div class="row">
-                    <div class="col-1">
-                      <i class="far fa-envelope"></i>
-                    </div>
-                    <div class="col-9">
-                      <a href="mailto:ptanmay143@gmail.com">
-                        <span>ptanmay143@gmail.com</span></a
-                      >
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-1">
-                      <i class="far fa-envelope"></i>
-                    </div>
-                    <div class="col-9">
-                      <a href="mailto:ptanmay143@outlook.com">
-                        <span>ptanmay143@outlook.com</span></a
-                      >
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-1">
-                      <i class="far fa-calendar"></i>
-                    </div>
-                    <div class="col-9">
-                      <a
-                        href="https://www.calculator.net/age-calculator.html?today=12%2F04%2F1999"
-                      >
-                        <span>05/12/1999</span></a
-                      >
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-1">
-                      <i class="fab fa-instagram"></i>
-                    </div>
-                    <div class="col-9">
-                      <a href="https://www.instagram.com/ptanmay143/">
-                        <span>ptanmay143</span></a
-                      >
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
