Move languages and email section to contact page

--- a/contact.html
+++ b/contact.html
@@ -79,26 +79,65 @@
     <main class="page contact-page">
       <section class="portfolio-block contact">
         <div class="container">
-          <h1 class="text-left" style="margin-top: 20px; margin-bottom: 5px">
-            Social
-          </h1>
-          <div class="card-group">
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">
-                  <i class="fab fa-instagram"></i>&nbsp;Instagram<br />
-                </h4>
-                <p class="card-text">ID: ptanmay143<br /></p>
-                <a
-                  class="card-link"
-                  href="https://www.instagram.com/ptanmay143/"
-                  target="_blank"
-                >
-                  <button class="btn btn-primary" type="button">Visit</button>
-                </a>
+          <div class="group">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="skills portfolio-info-card">
+                  <h2>Languages</h2>
+                  <h3>English</h3>
+                  <h3>Marathi (Mother Tongue)</h3>
+                  <h3>Hindi</h3>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="contact-info portfolio-info-card">
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="far fa-envelope"></i>
+                    </div>
+                    <div class="col-9">
+                      <a href="mailto:ptanmay143@gmail.com">
+                        <span>ptanmay143@gmail.com</span></a
+                      >
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="far fa-envelope"></i>
+                    </div>
+                    <div class="col-9">
+                      <a href="mailto:ptanmay143@outlook.com">
+                        <span>ptanmay143@outlook.com</span></a
+                      >
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="far fa-calendar"></i>
+                    </div>
+                    <div class="col-9">
+                      <a
+                        href="https://www.calculator.net/age-calculator.html?today=12%2F04%2F1999"
+                      >
+                        <span>05/12/1999</span></a
+                      >
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="fab fa-instagram"></i>
+                    </div>
+                    <div class="col-9">
+                      <a href="https://www.instagram.com/ptanmay143/">
+                        <span>ptanmay143</span></a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+
           <h1 class="text-left" style="margin-top: 20px; margin-bottom: 5px">
             Gaming
           </h1>
