Fix background behind about section

--- a/index.html
+++ b/index.html
@@ -1,87 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tanmay Pachpande | Data Scientist & Developer</title>
-    <link rel="stylesheet" href="styles/theme.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/theme.css" />
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
+  </head>
+  <body>
     <canvas class="matrix-bg" id="matrixCanvas"></canvas>
     <div class="binary-animation" id="binaryText"></div>
 
     <header>
-        <div class="container">
-            <div class="header-content">
-                <div class="header-text">
-                    <h1>TANMAY_PACHPANDE</h1>
-                    <p class="subtitle">Data Scientist & Software Developer</p>
-                </div>
-                <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">
-                    <span class="theme-icon">☀️</span>
-                </button>
-            </div>
-            <nav class="nav-links">
-                <a href="#about">About</a>
-                <a href="#experience">Experience</a>
-                <a href="#skills">Skills</a>
-                <a href="#projects">Projects</a>
-                <a href="#education">Education</a>
-                <a href="#contact">Contact</a>
-            </nav>
+      <div class="container">
+        <div class="header-content">
+          <div class="header-text">
+            <h1>TANMAY_PACHPANDE</h1>
+            <p class="subtitle">Data Scientist & Software Developer</p>
+          </div>
+          <button
+            id="themeToggle"
+            class="theme-toggle"
+            aria-label="Toggle theme"
+          >
+            <span class="theme-icon">☀️</span>
+          </button>
         </div>
+        <nav class="nav-links">
+          <a href="#about">About</a>
+          <a href="#experience">Experience</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#education">Education</a>
+          <a href="#contact">Contact</a>
+        </nav>
+      </div>
     </header>
 
     <main>
-        <section id="about" class="section">
-            <div class="container">
-                <h2 class="section-title">ABOUT_ME</h2>
-                <div id="aboutContent"></div>
-            </div>
-        </section>
+      <section id="about" class="section">
+        <div class="container">
+          <h2 class="section-title">ABOUT_ME</h2>
+          <div id="aboutContent"></div>
+        </div>
+      </section>
 
-        <section id="experience" class="section">
-            <div class="container">
-                <h2 class="section-title">EXPERIENCE</h2>
-                <div id="experienceContent"></div>
-            </div>
-        </section>
+      <section id="experience" class="section">
+        <div class="container">
+          <h2 class="section-title">EXPERIENCE</h2>
+          <div id="experienceContent"></div>
+        </div>
+      </section>
 
-        <section id="skills" class="section">
-            <div class="container">
-                <h2 class="section-title">SKILLS</h2>
-                <div id="skillsContent"></div>
-            </div>
-        </section>
+      <section id="skills" class="section">
+        <div class="container">
+          <h2 class="section-title">SKILLS</h2>
+          <div id="skillsContent"></div>
+        </div>
+      </section>
 
-        <section id="projects" class="section">
-            <div class="container">
-                <h2 class="section-title">PROJECTS</h2>
-                <div id="projectsContent"></div>
-            </div>
-        </section>
+      <section id="projects" class="section">
+        <div class="container">
+          <h2 class="section-title">PROJECTS</h2>
+          <div id="projectsContent"></div>
+        </div>
+      </section>
 
-        <section id="education" class="section">
-            <div class="container">
-                <h2 class="section-title">EDUCATION</h2>
-                <div id="educationContent"></div>
-            </div>
-        </section>
+      <section id="education" class="section">
+        <div class="container">
+          <h2 class="section-title">EDUCATION</h2>
+          <div id="educationContent"></div>
+        </div>
+      </section>
 
-        <section id="contact" class="section">
-            <div class="container">
-                <h2 class="section-title">CONTACT</h2>
-                <div id="contactContent"></div>
-            </div>
-        </section>
+      <section id="contact" class="section">
+        <div class="container">
+          <h2 class="section-title">CONTACT</h2>
+          <div id="contactContent"></div>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div class="container">
-            <p>© 2025 Tanmay Pachpande. Built with passion for data and code.</p>
-        </div>
+      <div class="container">
+        <p>© 2025 Tanmay Pachpande. Built with passion for data and code.</p>
+      </div>
     </footer>
 
     <script src="data/content.js"></script>
@@ -89,5 +93,5 @@
     <script src="scripts/theme.js"></script>
     <script src="scripts/animations.js"></script>
     <script src="scripts/main.js"></script>
-</body>
+  </body>
 </html>
